<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="permlab_bluetoothShareManager">Access download manager.</string>
    <string name="permdesc_bluetoothShareManager">Allows the app to access the BluetoothShare manager and use it to transfer files.</string>
    <string name="permlab_bluetoothWhitelist">Whitelist bluetooth device access.</string>
    <string name="permdesc_bluetoothWhitelist">Allows the app to temporarily whitelist a Bluetooth device, allowing that device to send files to this device without user confirmation.</string>
    <string name="bt_share_picker_label">Bluetooth</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknownNumber">Unknown</string>
    <string name="airplane_error_title">Airplane mode</string>
    <string name="airplane_error_msg">"You can't use Bluetooth in Airplane mode."</string>
    <string name="bt_enable_title" />
    <string name="bt_enable_line1">To use Bluetooth services, you must first turn on Bluetooth.</string>
    <string name="bt_enable_line2">Turn on Bluetooth now?</string>
    <string name="bt_enable_cancel">Cancel</string>
    <string name="bt_enable_ok">Turn on</string>
    <string name="incoming_file_confirm_title">File transfer</string>
    <string name="incoming_file_confirm_content">Accept incoming file?</string>
    <string name="incoming_file_confirm_cancel">Decline</string>
    <string name="incoming_file_confirm_ok">Accept</string>
    <string name="incoming_file_confirm_timeout_ok">OK</string>
    <string name="incoming_file_confirm_timeout_content">There was a timeout while accepting an incoming file from \"%1$s\"</string>
    <string name="incoming_file_confirm_Notification_title">Bluetooth share: Incoming file</string>
    <string name="incoming_file_confirm_Notification_caption">Do you want to receive this file?</string>
    <string name="incoming_file_toast_msg">Incoming file from another device. Confirm you want to receive this file.</string>
    <string name="notification_receiving">Bluetooth share: Receiving %1$s</string>
    <string name="notification_received">Bluetooth share: Received %1$s</string>
    <string name="notification_received_fail">Bluetooth share: File %1$s not received</string>
    <string name="notification_sending">Bluetooth share: Sending %1$s</string>
    <string name="notification_sent">Bluetooth share: Sent %1$s</string>
    <string name="notification_sent_complete">100% complete</string>
    <string name="notification_sent_fail">Bluetooth share: File %1$s not sent</string>
    <string name="download_title">File transfer</string>
    <string name="download_line1">From: \"%1$s\"</string>
    <string name="download_line2">File: %1$s</string>
    <string name="download_line3">File size: %1$s</string>
    <string name="download_line4" />
    <string name="download_line5">Receiving file…</string>
    <string name="download_cancel">Stop</string>
    <string name="download_ok">Hide</string>
    <string name="incoming_line1">From</string>
    <string name="incoming_line2">Filename</string>
    <string name="incoming_line3">Size</string>
    <string name="download_fail_line1">File not received</string>
    <string name="download_fail_line2">File: %1$s</string>
    <string name="download_fail_line3">Reason: %1$s</string>
    <string name="download_fail_ok">OK</string>
    <string name="download_succ_line5">File received</string>
    <string name="download_succ_ok">Open</string>
    <string name="upload_line1">To: \"%1$s\"</string>
    <string name="upload_line3">File type: %1$s (%2$s)</string>
    <string name="upload_line5">Sending file…</string>
    <string name="upload_succ_line5">File sent</string>
    <string name="upload_succ_ok">OK</string>
    <string name="upload_fail_line1">"The file wasn't sent to \"%1$s\"."</string>
    <string name="upload_fail_line1_2">File: %1$s</string>
    <string name="upload_fail_ok">Try again</string>
    <string name="upload_fail_cancel">Close</string>
    <string name="bt_error_btn_ok">OK</string>
    <string name="unknown_file">Unknown file</string>
    <string name="unknown_file_desc">"There's no app to handle this type of file. 
"</string>
    <string name="not_exist_file">No file</string>
    <string name="not_exist_file_desc">"The file doesn't exist. 
"</string>
    <string name="enabling_progress_title">Please wait…</string>
    <string name="enabling_progress_content">Turning on Bluetooth…</string>
    <string name="bt_toast_1">The file will be received. Check progress in the Notifications panel.</string>
    <string name="bt_toast_2">"The file can't be received."</string>
    <string name="bt_toast_3">Stopped receiving file from \"%1$s\"</string>
    <string name="bt_toast_4">Sending file to \"%1$s\"</string>
    <string name="bt_toast_5">Sending %1$s files to \"%2$s\"</string>
    <string name="bt_toast_6">Stopped sending file to \"%1$s\"</string>
    <string name="bt_sm_2_1">"There isn't enough space on the SD card to save the file from \"%1$s\""</string>
    <string name="bt_sm_2_2">Space needed: %1$s</string>
    <string name="ErrorTooManyRequests">Too many requests are being processed. Try again later.</string>
    <string name="status_pending">File transfer not started yet.</string>
    <string name="status_running">File transfer is ongoing.</string>
    <string name="status_success">File transfer completed successfully.</string>
    <string name="status_not_accept">"Content isn't supported."</string>
    <string name="status_forbidden">Transfer forbidden by target device.</string>
    <string name="status_canceled">Transfer canceled by user.</string>
    <string name="status_file_error">Storage issue.</string>
    <string name="status_no_sd_card">No SD card. Insert an SD card to save transferred files.</string>
    <string name="status_connection_error">Connection unsuccessful.</string>
    <string name="status_protocol_error">"Request can't be handled correctly."</string>
    <string name="status_unknown_error">Unknown error.</string>
    <string name="btopp_live_folder">Bluetooth received</string>
    <string name="download_success">%1$s Received complete.</string>
    <string name="upload_success">%1$s Sent complete.</string>
    <string name="inbound_history_title">Inbound transfers</string>
    <string name="outbound_history_title">Outbound transfers</string>
    <string name="no_transfers">Transfer history is empty.</string>
    <string name="transfer_clear_dlg_msg">All items will be cleared from the list.</string>
    <string name="outbound_noti_title">Bluetooth share: Sent files</string>
    <string name="inbound_noti_title">Bluetooth share: Received files</string>
    <string name="noti_caption">%1$s successful, %2$s unsuccessful.</string>
    <string name="transfer_menu_clear_all">Clear list</string>
    <string name="transfer_menu_open">Open</string>
    <string name="transfer_menu_clear">Clear from list</string>
    <string name="transfer_clear_dlg_title">Clear</string>
    <string name="bluetooth_share_file_name">bluetooth_content_share</string>
    <string name="sharedUserId" />
    <string name="process" />
    <string name="bluetooth_map_email_settings_save">Save</string>
    <string name="bluetooth_map_email_settings_cancel">Cancel</string>
    <string name="bluetooth_map_email_settings_intro">Select the email accounts you want to share through Bluetooth. You still have to accept any acceess to the accounts when connecting.</string>
    <string name="bluetooth_map_email_settings_count">Slots left:</string>
    <string name="bluetooth_map_email_settings_app_icon">Application Icon</string>
    <string name="bluetooth_map_email_settings_title">Bluetooth Message Sharing Settings</string>
    <string name="bluetooth_map_email_settings_no_account_slots_left">Cannot select account. 0 slots left</string>
    <string name="pbap_session_key_dialog_title">Type session key for %1$s</string>
    <string name="pbap_session_key_dialog_header">Bluetooth session key required</string>
    <string name="pbap_acceptance_timeout_message">There was time out to accept connection with %1$s</string>
    <string name="pbap_authentication_timeout_message">There was time out to input session key with %1$s</string>
    <string name="auth_notif_ticker">Obex authentication request</string>
    <string name="auth_notif_title">Session Key</string>
    <string name="auth_notif_message">Type session key for %1$s</string>
    <string name="defaultname">Carkit</string>
    <string name="unknownName">Unknown name</string>
    <string name="localPhoneName">My name</string>
    <string name="defaultnumber">000000</string>
    <string name="hello">Hello World, TestActivity</string>
    <string name="app_name">Bluetooth Share</string>
    <string name="insert_record">Insert record</string>
    <string name="update_record">Confirm record</string>
    <string name="ack_record">Ack record</string>
    <string name="deleteAll_record">Delete all record</string>
    <string name="ok_button">OK</string>
    <string name="delete_record">Delete record</string>
    <string name="start_server">Start TCP server</string>
    <string name="notify_server">Notify TCP server</string>
</resources>
