<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:text="@string/incoming_line1" style="@style/file_transfer_item_label" />
        <TextView android:id="@id/from_content" style="@style/file_transfer_item_content" />
        <TextView android:text="@string/incoming_line2" style="@style/file_transfer_item_label" />
        <TextView android:id="@id/filename_content" style="@style/file_transfer_item_content" />
        <TextView android:text="@string/incoming_line3" style="@style/file_transfer_item_label" />
        <TextView android:id="@id/size_content" style="@style/file_transfer_item_content" />
    </LinearLayout>
</ScrollView>